--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>Sebastian's Website</h1>
+<!DOCTYPE html>
+<html lang="en-ca">
+<head>
+    <meta charset="utf-8">
+    <title>Sebastian's Website</title>
+    </head>
+    <body>
+        
+    <h1>Sebastian's Website</h1>
+    
+    </body>
+</html>
+
+
