Added html content

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>Sebastian's Website</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="css/general.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,700,500' rel='stylesheet' type='text/css'>
     </head>
-    <body>
+<body>
         
     <h1>Sebastian's Website</h1>
     
-    </body>
+</body>
 </html>
+
+
 
 
