--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </a>
         
         <nav>
-            <ul class="float-left">
-                <li class="floatleft">Home</li>
-                <li class="floatleft">About</li>
-                <li class="floatleft">Contact</li>
+            <ul>
+                <li class="nav">Home</li>
+                <li class="nav">About</li>
+                <li class="nav">Contact</li>
             </ul>
         </nav>
     
