Added Flexible Backgrounds

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     
 <h2>About</h2>
     
-<div class="about-us-background">
+<div class="about-background">
     <img src="http://placehold.it/400x300" class="founder" alt="About Image">
 </div>
 
