--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@ My humble role in the whole design process is to communicate the concepts and ta
     <div class="unit gutter unit-s-1 unit-r-1-2 unit-m-1-3 unit-l-1-4 chart__item">
         <a class="chart__link" href="#">
             <img class="img-flex" src="http://placehold.it/400x300" alt="">
-                <span class="chart__label">Jan</span>
                 <div class="chart__bar-wrap" style="top: 45.9%">
                     <span class="chart__bar"></span>
-                    <span class="chart__count">$13&nbsp;M</span>
+                    <span class="chart__count cover-names">Illustration</span>
                 </div>
             </img>
         </a>
