--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ I believe that great design happens when the design communicates the traits of t
 My humble role in the whole design process is to communicate the concepts and takeaways one person wants to share with the other. One profession that does this is Graphic Design that I am a part of. </p>
 
 
-<div class="grid wrapper chart clearfix">
+<div class="grid">
     <div class="unit gutter unit-s-1 unit-r-1-2 unit-m-1-3 unit-l-1-4 chart__item img-flex padding">
-        <a class="chart__link img-flex" href="#">
+        <a class="chart__link img-flex" href="illustration-landscape.html">
             <img class="img-flex" src="http://placehold.it/400x300" alt="">
                 <div class="chart__bar-wrap img-flex" style="top: 45%">
                     <span class="chart__bar"></span>
