working on grids

--- a/illustration-portrait.html
+++ b/illustration-portrait.html
@@ -34,7 +34,7 @@
         <img class="img-flex" src="http://placehold.it/400x600" alt="">
     </div>
     
-    <div class="media-body">
+    <div class="media-body unit gutter unit-s-1-2 unit-r-1-2 unit-m-1-2 unit-l-1-2 padding">
         <h1>The Tennis Serve</h1>
         <p> My goal is to really understand people. I wish to understand their personality, their values, their emotions, and goals. It’s important for me to understand what those traits mean when a person promotes a message from themselves to the public. I believe that great design happens when the design communicates the traits of the promoters, the designers, and the traits of the public viewing it. When the larger population agrees, respects. </p>
     </div>
