Made some adjustments

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@ My humble role in the whole design process is to communicate the concepts and ta
     </div>
     
     <div class="unit gutter unit-s-1 unit-r-1-2 unit-m-1-3 unit-l-1-4 chart__item img-flex padding">
-        <a class="chart__link img-flex" href="typography.html">
+        <a class="chart__link img-flex" href="motion.html">
             <img class="img-flex" src="http://placehold.it/400x300" alt="">
                 <div class="chart__bar-wrap img-flex" style="top: 45%">
                     <span class="chart__bar"></span>
-                    <span class="chart__count cover-names">Typography</span>
+                    <span class="chart__count cover-names">Motion</span>
                 </div>
             </img>
         </a>
