--- a/motion.html
+++ b/motion.html
@@ -11,9 +11,13 @@
 <body>
 <header>
     
-    <a href="index.html">   
-        <img class="my-logotype" src="images/logotype.svg" alt="Sebastian's Logotype">
-    </a> 
+    <div class="grid">
+        <div class="unit gutter unit-s-1 unit-r-1-2 unit-m-1-2 unit-l-2-5 padding">
+            <a href="index.html">   
+                <img class="my-logotype" src="images/logotype.svg" alt="Sebastian's Logotype">
+            </a> 
+        </div>    
+    </div>
     
     <nav class="nav-top">
         <ul>
