--- a/illustration-landscape.html
+++ b/illustration-landscape.html
@@ -22,7 +22,7 @@
     <nav class="nav-top">
         <ul>
             <li class="nav"><a href="index.html">Home</a></li>
-            <li class="nav"><a href="about.html">About</a></li>
+            <li class="nav"><a href="index.html#about">About</a></li>
         </ul>
     </nav>
     
