--- a/illustration-portrait.html
+++ b/illustration-portrait.html
@@ -7,6 +7,7 @@
     <link href="css/general.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,700,500' rel='stylesheet' type='text/css'>
     <link href="css/grid.css" rel="stylesheet">
+    <link href="css/typography.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -43,7 +44,7 @@
     
     <div class="media-body unit gutter unit-s-1 unit-r-1-2 unit-m-1-2 unit-l-2-3 padding">
         <h1>The Tennis Serve</h1>
-        <p> My goal is to really understand people. I wish to understand their personality, their values, their emotions, and goals. It’s important for me to understand what those traits mean when a person promotes a message from themselves to the public. I believe that great design happens when the design communicates the traits of the promoters, the designers, and the traits of the public viewing it. When the larger population agrees, respects. </p>
+        <p> My goal is to really understand people. I wish to understand their personality, their values, their emotions, and goals. It’s important for me to understand what those traits. I believe that great design happens when the design communicates the traits of the promoters, the designers. </p>
     </div>
 </div>
     
