--- a/motion.html
+++ b/motion.html
@@ -7,6 +7,7 @@
     <link href="css/general.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,700,500' rel='stylesheet' type='text/css'>
     <link href="css/grid.css" rel="stylesheet">
+    <link href="css/typography.css" rel="stylesheet">
 </head>
 <body>
 <header>
