--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ My humble role in the whole design process is to communicate the concepts and ta
         </a>
     </figure>
     
-    <figure class=" card unit unit-s-1 unit-r-1-2 unit-m-1-3 unit-l-hidden">
+    <figure class=" card unit unit-s-1 unit-r-hidden unit-m-1-3 unit-l-hidden">
         <a href="motion.html">
             <img src="http://placehold.it/400x300" alt="">
         
