Added some portfolio pieces

--- a/illustration-portrait.html
+++ b/illustration-portrait.html
@@ -38,7 +38,7 @@
 <div class="media"> <!-- Div is an empty box to group elements -->
    
     <div class="media-img-reversed unit gutter unit-s-1 unit-r-1-2 unit-m-1-2 unit-l-1-4 padding">
-        <img class="img-flex" src="http://placehold.it/400x600" alt="">
+        <img class="img-flex" src="images/the-tennis-serve.jpg" alt="">
     </div>
     
     
