--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ My humble role in the whole design process is to communicate the concepts and ta
         
     <figure class=" card unit unit-s-1 unit-r-1-2 unit-m-1-3 unit-l-1-4">
         <a href="typography.html">
-            <img src="http://placehold.it/400x300" alt="">
+            <img src="images/obsessed-with-speed-cover.jpg" alt="">
             
             <figcaption class="card__text">
                 <h3 class="cover-names">Typography</h3>
