Added banner on Bridgehead

--- a/layout.html
+++ b/layout.html
@@ -33,7 +33,7 @@
     
    
 
-<div class="banner relative">
+<div class="banner relative white">
     <h1 class="layout-project">Fast Company</h1>
     <h2 class="layout-title">Layout</h2>
 </div>
