--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ My humble role in the whole design process is to communicate the concepts and ta
     
     <figure class=" card unit unit-s-1 unit-r-hidden unit-m-1-3 unit-l-hidden">
         <a href="motion.html">
-            <img src="http://placehold.it/400x300" alt="">
+            <img src="images/kinetic-type.jpg" alt="">
         
         <figcaption class="card__text">
             <h3 class="cover-names">Motion</h3>
