--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ My humble role in the whole design process is to communicate the concepts and ta
     </figure>
         
     <figure class=" card unit unit-s-1 unit-r-1-2 unit-m-1-3 unit-l-1-4">
-        <a href="layout.html">
+        <a href="cirque-du-soleil.html">
             <img src="images/cirque-du-soleil-cover.jpg" alt="">
         
         <figcaption class="card__text">
