Fixed Cover Display Problem

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     
     <figure class=" card unit unit-s-1 unit-r-hidden unit-m-1-3 unit-l-hidden">
         <a href="motion.html">
-            <img src="kinetic-type.jpg" alt="">
+            <img src="images/kinetic-type.jpg" alt="">
         
         <figcaption class="card__text">
             <h3 class="cover-names">Motion</h3>
