--- a/motion.html
+++ b/motion.html
@@ -24,6 +24,7 @@
         <ul>
             <li class="nav"><a href="index.html">Home</a></li>
             <li class="nav"><a href="index.html#about">About"</a></li>
+            <li class="nav"><a href="index.html#contact">Contact</a></li>
         </ul>
     </nav>
     
@@ -39,6 +40,7 @@
 
     
 </div>
+
 
 </body>
 </html>
