Added Embedded Video from Vimeo

--- a/motion.html
+++ b/motion.html
@@ -38,8 +38,12 @@
     <img class="img-flex" src="http://placehold.it/400x300" alt="">
 </div>
 
+
+
     
 </div>
+    
+<iframe src="//player.vimeo.com/video/110826581" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/110826581">Broadcast Package – Blue Hen Farm</a> from <a href="http://vimeo.com/sebastiannadeau">Sebastian Nadeau</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 
 </body>
