Made Movie Previews of Blue Hen Farm

--- a/kinetic-type.html
+++ b/kinetic-type.html
@@ -44,7 +44,7 @@
     </div>
     
     <div class="unit gutter unit-s-1 unit-r-1-2 unit-m-1-2 unit-l-1-2 padding">
-        <h1 class="teal">Kinetic Type</h1>
+        <h1 class="teal">Kinetic Type – Dead Poet's Society</h1>
         <p> This is kinetic typography created in After Effects featuring a clip from the Dead Poets Society with Robin Williams and a student. Enjoy.</p>
     </div>
 </div>
