--- a/broadcast.html
+++ b/broadcast.html
@@ -12,7 +12,7 @@
 
 <header>
     
-    <div class="grid">
+    <div class="grid logo-spacing">
         <div class="unit gutter unit-s-1 unit-r-1-2 unit-m-1-2 unit-l-2-5 padding">
             <a href="index.html">   
                 <img class="my-logotype" src="images/logotype.svg" alt="Sebastian's Logotype">
