--- a/senators.html
+++ b/senators.html
@@ -12,7 +12,7 @@
 <body>
 <header>
     
-    <div class="grid">
+    <div class="grid logo-spacing">
         <div class="unit gutter unit-s-1 unit-r-1-2 unit-m-1-2 unit-l-2-5 padding">
             <a href="index.html">   
                 <img class="my-logotype" src="images/logotype.svg" alt="Sebastian's Logotype">
@@ -38,7 +38,7 @@
 
     
 <div class="unit unit-s-1 unit-r-1 unit-m-1 unit-l-1 type-spacing">
-        <h1>Senators</h1>
+        <h1>Ottawa Senators</h1>
         <p> My goal is to really understand people. I wish to understand their personality, their values, their emotions, and goals. It’s important for me to understand what those traits mean when a person promotes a message from themselves to the public.</p>
 </div>
 
