Added some body copy for pieces.

--- a/typography.html
+++ b/typography.html
@@ -46,7 +46,7 @@
     </div>
     
     <div class="media-body unit gutter unit-s-1 unit-r-1-2 unit-m-3-4 unit-l-1-2 padding type-spacing">
-        <p> My goal is to really understand people. I wish to understand their personality, their values, their emotions, and goals. It’s important for me to understand what those traits mean when a person promotes a message from themselves to the public. I believe that great design happens. </p>
+        <p>This layout is an experimentation of a different style of design structure using angled grid structures.</p>
     </div>
 </div>
     
