--- a/company.html
+++ b/company.html
@@ -45,7 +45,7 @@
     
     <div class="media-body unit gutter unit-s-1 unit-r-1-2 unit-m-1-2 unit-l-1-2">
         <h1>Company</h1>
-        <p> My goal is to really understand people. I wish to understand their personality, their values, their emotions, and goals. It’s important for me to understand what those traits. I believe that great design happens when the design communicates the traits of the promoters, the designers. </p>
+        <p>Company is a play that takes part in New York city and I wanted to create a city collage of the environment.</p>
     </div>
     
     <div class="unit gutter unit-s-1-2 unit-r-1-3 unit-m-1-3 unit-l-3 img-flex padding">
