--- a/layout.html
+++ b/layout.html
@@ -58,9 +58,7 @@
 </div>
 
         
-<p> My goal is to really understand people. I wish to understand their personality, their values, their emotions, and goals. It’s important for me to understand what those traits mean when a person promotes a message from themselves to the public.
-
-I believe that great design happens when the design communicates the traits of the promoters, the designers, and the traits of the public viewing it. When the larger population agrees, respects, and engages in the positive values promoted through a message my personal goal is complete. </p>
+<p> Bridgehead is a coffee brewing company that produces fresh produce. This is a brochure I designed for the company.</p>
     
 <div class="grid">
     <div class="unit gutter unit-s-1-2 unit-r-1-3 unit-m-1-3 img-flex padding">
