--- a/senators.html
+++ b/senators.html
@@ -39,7 +39,7 @@
     
 <div class="unit unit-s-1 unit-r-1 unit-m-1 unit-l-1 type-spacing">
         <h1>Ottawa Senators</h1>
-        <p> My goal is to really understand people. I wish to understand their personality, their values, their emotions, and goals. It’s important for me to understand what those traits mean when a person promotes a message from themselves to the public.</p>
+        <p>This illustration was part of campaign for the Ottawa Senators.</p>
 </div>
 
     
