--- a/broadcast.html
+++ b/broadcast.html
@@ -43,7 +43,9 @@
 
 <div class="media"> <!-- Div is an empty box to group elements -->
     <div class="unit gutter unit-s-1 unit-r-1-2 unit-m-1-2 unit-l-1-2 padding">
-        <iframe src="//player.vimeo.com/video/110826581" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <div class="embed embed--16by9">
+        <iframe class="embed__item" src="//player.vimeo.com/video/110826581"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
     </div>
     
     <div class="unit gutter unit-s-1 unit-r-1-2 unit-m-1-2 unit-l-1-2 padding">
