--- a/kinetic-type.html
+++ b/kinetic-type.html
@@ -40,7 +40,9 @@
     
 <div class="media"> <!-- Div is an empty box to group elements -->
     <div class="unit gutter unit-s-1 unit-r-1-2 unit-m-1-2 unit-l-1-2 padding">
-        <iframe src="//player.vimeo.com/video/87825201" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <div class="embed embed--16by9">
+        <iframe class="embed__item" src="//player.vimeo.com/video/87825201" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
     </div>
     
     <div class="unit gutter unit-s-1 unit-r-1-2 unit-m-1-2 unit-l-1-2 padding">
