--- a/senators.html
+++ b/senators.html
@@ -39,7 +39,7 @@
     
 <div class="unit unit-s-1 unit-r-1 unit-m-1 unit-l-1 type-spacing">
         <h1>Ottawa Senators</h1>
-        <p>This illustration was part of campaign for the Ottawa Senators.</p>
+        <p>This illustration was part of a campaign for the Ottawa Senators.</p>
 </div>
 
     
