--- a/layout.html
+++ b/layout.html
@@ -58,7 +58,7 @@
 </div>
 
         
-<p> Bridgehead is a coffee brewing company that produces fresh produce. This is a brochure I designed for the company.</p>
+<p> Bridgehead is a coffee brewing company that makes fresh coffee. This is a brochure I designed for the company as a College assignment.</p>
     
 <div class="grid">
     <div class="unit gutter unit-s-1-2 unit-r-1-3 unit-m-1-3 img-flex padding">
