--- a/cirque-du-soleil.html
+++ b/cirque-du-soleil.html
@@ -55,7 +55,7 @@
 </div>
 
         
-<p>This is an anual report I designed for Cirque Du Soleil</p>
+<p>This is a designed anual report for Cirque Du Soleil that was part of a school project in College.</p>
     
 <div class="grid">
     <div class="unit gutter unit-s-1-2 unit-r-1-3 unit-m-1-3 img-flex padding">
