--- a/typography.html
+++ b/typography.html
@@ -46,7 +46,7 @@
     </div>
     
     <div class="media-body unit gutter unit-s-1 unit-r-1-2 unit-m-3-4 unit-l-1-2 padding type-spacing">
-        <p>This layout is an experimentation of a different style of design structure using angled grid structures.</p>
+        <p>This layout is an experimentation using angled grid structures in design.</p>
     </div>
 </div>
     
