edited type Senators

--- a/bright-lights.html
+++ b/bright-lights.html
@@ -39,7 +39,7 @@
     
 <div class="unit unit-s-1 unit-r-1 unit-m-1 unit-l-1 type-spacing">
         <h1>Bright Lights</h1>
-        <p>This poster is a rendered illustration of a fictitious for the NAC. It is a concert called "Bright Lights" and features Benny Green on piano and Russel Malone on guitar. </p>
+        <p>This poster is a rendered illustration of a fictitious play for the NAC. It is a concert called "Bright Lights" and features Benny Green on piano and Russel Malone on guitar. </p>
 </div>
 
     
