--- a/tennis-serve.html
+++ b/tennis-serve.html
@@ -45,7 +45,7 @@
     
     <div class="media-body unit gutter unit-s-1 unit-r-1-2 unit-m-1-2 unit-l-1-2">
         <h1>The Tennis Serve</h1>
-        <p> This tennis illustration is for the Algonquin Times, our local College newspaper featuring 5 tips on how to serve.</p>
+        <p> This tennis illustration is for a school project that might have been presented at the Algonquin Times, our local College newspaper. The poster features 5 tips on how to serve.</p>
     </div>
     
     <div class="unit gutter unit-s-1-2 unit-r-1-3 unit-m-1-3 unit-l-3 img-flex padding">
