made a slight change in the project description

--- a/senators.html
+++ b/senators.html
@@ -39,7 +39,7 @@
     
 <div class="unit unit-s-1 unit-r-1 unit-m-1 unit-l-1 type-spacing">
         <h1>Ottawa Senators</h1>
-        <p>This illustration was part of a school project. It was about a capaign involving the Ottawa Senators about getting the Ottawa Hockey community to see a live game at the stands.</p>
+        <p>This illustration was part of a school project. It was about a capaign involving the Ottawa Senators about getting the Ottawa hockey community to see a live game at the stands.</p>
 </div>
 
     
