feat(all): add welcome header

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </div>
     
     <div class="media-body unit unit-s-1 unit-r-2-3 unit-m-2-3 unit-l-3-5">
+        <h2 class="welcome">Welcome!</h2>
         <p class="columns-s columns-r columns-l wrapper"> Thank you for stopping by.
         
         It is my hope that in the next little while you will be curious, and hopefully even inspired by some new thought, personal goals, and the underlying design goals we all share that go beyond simply displaying information. 
@@ -151,7 +152,7 @@
 <div id="about">   
 
 <div class="type-spacing">
-<h2>About</h2>
+<h2 class="welcome">About</h2>
 
 
 <p class="columns-s columns-r columns-l wrapper">
