feat(all): add borders on navigation

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
         <a href="index.html">   
             <img class="logotype" src="images/logotype-yellow.svg" alt="Sebastian's Logotype">
         </a>
+        <div class="border-bottom"></div>
     </div>
     <nav class="nav-top"> 
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#about">About</a></li>
-            <li><a href="index.html#contact">Contact</a></li>
+            <li><a class="border-left-right" href="index.html">Home</a></li>
+            <li><a class="border-right" href="index.html#about">About</a></li>
+            <li><a class="border-right" href="index.html#contact">Contact</a></li>
         </ul>
     </nav>
     
