--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </figure>
         
     <figure class="card unit unit-s-1 unit-r-1-2 unit-m-1-3 unit-l-1-5">
-        <a href="typography.html">
+        <a href="obsessed-with-speed.html">
             <img src="images/obsessed-with-speed-cover.jpg" alt="">
             
             <figcaption class="card__text">
