refactor(html): make minor type adjustments

--- a/bright-lights.html
+++ b/bright-lights.html
@@ -36,7 +36,7 @@
     
 <div class="unit unit-s-1 unit-r-1 unit-m-1 unit-l-1 type-spacing">
         <h1>Bright Lights</h1>
-        <p>This poster is a rendered illustration of a fictitious play for the NAC. It is a concert called "Bright Lights" and features Benny Green on piano and Russel Malone on guitar. This project was just made conceptionally and was not used by the National Arts Centre. This poster was a private project and was not distributed or used commercially in any way.</p>
+        <p>This poster is a rendered illustration of a fictitious play for the NAC. It is a concert called "Bright Lights" and features Benny Green on piano and Russel Malone on guitar. This project was just made conceptionally and was not used by the National Arts Centre. This poster was a private project and was not distributed or used commercially.</p>
 </div>
 
     
