--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </figure>
         
     <figure class=" card unit unit-s-1 unit-r-1-2 unit-m-1-3 unit-l-1-5">
-        <a href="layout.html">
+        <a href="bridgehead.html">
             <img src="images/bridgehead-newsletter-cover.jpg" alt="">
             
         <figcaption class="card__text">
