--- a/bridgehead.html
+++ b/bridgehead.html
@@ -41,6 +41,10 @@
 <div class="grid">
     
     <div class="unit gutter unit-s-1 unit-r-1 unit-m-1 unit-l-1 img-flex padding">
+        <img class="img-flex" src="images/bridgehead-page-cover-2.jpg" alt="">
+    </div>
+    
+    <div class="unit gutter unit-s-1 unit-r-1 unit-m-1 unit-l-1 img-flex padding">
         <img class="img-flex" src="images/bridgehead-page-cover.jpg" alt="">
     </div>
 
