--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
     <meta charset="utf-8">
-    <title>Sebastian's Website</title>
+    <title>Sebastian's Online Portfolio</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/general.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,700,500' rel='stylesheet' type='text/css'>
